@@ -6,6 +6,7 @@
   * World selection merged in with main options dialog
   * Ability to select arbitrary directories to open worlds
   * "N" key will toggle back and forth between Nether and Overworld, if available.
+  * Minimap rotated so that north points up (previously it had pointed left)
 
 Minecraft X-Ray 2.7 Maintenance Branch 4 (2010.12.16)
 
